# officiating-tracker

./: .dockerignore  .env-template  .gitignore  CHANGELOG.md  Dockerfile  README.md  SETUP.md  heroku.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js
.github/: copilot-instructions.md
plans/: game-list-ux-improvements-prd.json  game-list-ux-improvements-prd.md
project/: settings.py  urls.py
project/static/css/: input.css  output.css
tracker/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
tracker/migrations/: 0001_initial.py  0002_location_profile.py  0003_alter_league_organization_alter_site_name.py  0004_alter_game_league_alter_game_site.py  0005_alter_game_options.py  0006_alter_game_options.py  0007_profile_city_profile_first_name_profile_home_address_and_more.py  0008_add_user_to_game.py  0009_add_fee_to_game.py
tracker/templates/: _base.html  base.html  home.html
tracker/templates/account/: login.html  logout.html  password_change.html  password_reset.html  signup.html
tracker/templates/game/: _add_form.html  _mileage_field.html  add.html  add_form.html  delete.html  detail.html  edit.html  icon-checkmark.html  list.html  stats.html
tracker/templates/profile/: edit.html  view.html
