[project]
name = "officiating-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "django-debug-toolbar>=6.0.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "googlemaps>=4.0.0,<5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]
